@@ -35,8 +35,6 @@ my @Tests =
     (
      ['fail-1', {ERR => "$prog: missing operand\n"
        . "Try '$prog --help' for more information.\n"}, {EXIT => '1'}],
-     ['fail-2', qw(a b), {ERR => "$prog: extra operand 'b'\n"
-       . "Try '$prog --help' for more information.\n"}, {EXIT => '1'}],
 
      ['a', qw(d/f),        {OUT => 'd'}],
      ['b', qw(/d/f),       {OUT => '/d'}],
@@ -51,6 +49,7 @@ my @Tests =
      ['k', qw(///a///b),   {OUT => '///a'}],
      ['l', qw(///a//b/),   {OUT => '///a'}],
      ['m', qw(''),         {OUT => '.'}],
+     ['n', qw(a/b c/d),    {OUT => "a\nc"}],
     );
 
 # Append a newline to end of each expected 'OUT' string.
